TEST_PROGRAMS/INVALID/lucas_stinchcombe/incorrect_while_loop.min
# invalid minilang program with incorrect while loop syntax

var a: int;
var b: int;
var c: int;
var answer: int;

a = 10
b = 6;
c = a - b;
answer = 1;

while (a-b):
	answer = answer * a;
	a = a - 1;
done;

while c:
	answer = answer / c;
	c = c - 1;
done;

